--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,12 @@
 <h1 style="font-size:60px;text-align:center;">Welcome Home Page</h1>
 <!-- <i></i> tag set text to italic. -->
-<p style="text-align:center;font-size:30px;"><i>This is some text.</i></p>
+<p style="text-align:center;font-size:30px;"><i>Wish You Were Here.</i></p>
 <!-- The <hr> tag defines a thematic break in an HTML page, and is most often displayed as a horizontal rule. -->
 <hr>
 <h2 style="color:blue;font-family:verdana;font-size:300%;text-align:center;">This is heading 2</h2>
 <p style="color:red;font-family:courier;text-align:center;">This is some other text.</p>
 <hr>
+
 <pre style="background-color:SlateGray;">
    My Bonnie lies over the ocean.
 
@@ -15,6 +16,9 @@
 
    Oh, bring back my Bonnie to me.
 </pre>
+<!-- Marking abbreviations can give useful information to browsers, translation systems and search-engines. -->
+<h2>HTML <abbr> for Abbreviations</h2>
+<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
 <p><em>This text is emphasized.</em></p>
 <p><i>This text is italic.</i></p>
 <p><mark>This text is mark.</mark></p>
