Modified description of welcome homepage.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,8 +6,11 @@
 <h2 style="color:blue;font-family:verdana;font-size:300%;text-align:center;">This is heading 2</h2>
 <p style="color:red;font-family:courier;text-align:center;">This is some other text.</p>
 <hr>
-
+<!-- The HTML <pre> Element -->
+  <!-- The text inside a <pre> element is displayed in a fixed-width font (usually Courier), and it preserves both spaces and line breaks: -->
 <pre style="background-color:SlateGray;">
+   <i>如果你想寫詩，寫在 &lt;pre&gt; 標籤內就可以保留詩的格式和留白:</i>
+
    My Bonnie lies over the ocean.
 
    My Bonnie lies over the sea.
